Ajout screen kariboo

--- a/mobile.html
+++ b/mobile.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Antoine Savignac</title>
+	<meta name="description" content="Antoine Savignac Portfolio" />
+	<meta name="keywords" content="antoine, savignac, antoine savignac, portfolio, web, chef de projet, junior" />
 	<link rel="icon" type="image/png" href="assets/img/favicon.png" />
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -20,6 +22,7 @@
 		<a href="https://twitter.com/AntoineSavignac" class="twitter" target="_blank"></a>
 		<a href="https://github.com/Nighthawk14" class="github" target="_blank"></a>
 		<a href="http://fr.linkedin.com/pub/antoine-savignac/3b/884/613/" class="linkedin" target="_blank"></a>
+		<a href="https://coderbits.com/NightHawk" class="coderbits" target="_blank"></a>
 		<a href="assets/pdf/cv-antoine_savignac.pdf" class="cv" target="_blank"></a>
 	</div>
 	<div class="scroll cursor"></div>
