Add yummypets mobile sites

--- a/mobile.html
+++ b/mobile.html
@@ -9,7 +9,7 @@
 	<link rel="icon" type="image/png" href="assets/img/favicon.png" />
 	<link rel="stylesheet" href="dist/css/mobile.css">
 </head>
-<body ng-controller="Main_mobile">
+<body ng-controller="Main">
 	<div id="logo">
 		<object data="assets/svg/logo-mobile.svg" type="image/svg+xml"></object>
 	</div>
@@ -63,6 +63,16 @@
 	  	<div class="modal-body">
 	  		<a href="http://www.lesfeuxverts.com" target="_blank" class="cursor submit">Les feux verts</a>
 	  		<a href="http://www.ironweb.org" target="_blank" class="cursor submit">Iron Web</a>
+	  	</div>
+	</div>
+	<div id="mobiles-yummy-modal" class="modal fade" role="dialog" aria-hidden="true">
+		<div class="modal-header">
+	  		<h1>Sites web mobiles / Yummypets</h1>
+	  	</div>
+	  	<div class="modal-body">
+	  		<a href="http://m.yummypets.com/articles/dist/#/list/" target="_blank" class="cursor submit">Blog mobile</a>
+	  		<a href="http://m.yummypets.com/missing/#/" target="_blank" class="cursor submit">Perdu / trouvés</a>
+	  		<a href="http://m.yummypets.com/classified/#/" target="_blank" class="cursor submit">Petites annonces</a>
 	  	</div>
 	</div>
 	<script type="text/javascript" src="dist/js/vendor-1.0.0.js"></script>
