gruntfile css mobile

--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Antoine Savignac Portfolio" />
 	<meta name="keywords" content="antoine, savignac, antoine savignac, portfolio, web, chef de projet, junior" />
 	<link rel="icon" type="image/png" href="assets/img/favicon.png" />
-	<link rel="stylesheet" href="dist/css/mobile.css">
+	<!--  <link rel="stylesheet" href="dist/css/mobile.css">-->
 </head>
 <body ng-controller="Main">
 	<div id="logo">
