--- a/mobile.html
+++ b/mobile.html
@@ -6,12 +6,14 @@
 	<title>Antoine Savignac</title>
 	<meta name="description" content="Antoine Savignac Portfolio" />
 	<meta name="keywords" content="antoine, savignac, antoine savignac, portfolio, web, chef de projet, junior" />
-	<link rel="icon" type="image/png" href="assets/img/favicon.png" />
-	<!--  <link rel="stylesheet" href="dist/css/mobile.css">-->
+	<link rel="icon" type="image/png" href="dist/img/favicon.png" />
+	<link rel="stylesheet" href="app/css/reset.css">
+	<link rel="stylesheet" href="app/css/bootstrap.min.css">
+	<link rel="stylesheet" href="app/css/mobile.css">
 </head>
 <body ng-controller="Main">
 	<div id="logo">
-		<object data="assets/svg/logo-mobile.svg" type="image/svg+xml"></object>
+		<object data="dist/svg/logo-mobile.svg" type="image/svg+xml"></object>
 	</div>
 	<div class="socials">
 		<a href="https://www.facebook.com/asavignac1" class="facebook" target="_blank"></a>
@@ -19,23 +21,23 @@
 		<a href="https://github.com/Nighthawk14" class="github" target="_blank"></a>
 		<a href="http://fr.linkedin.com/pub/antoine-savignac/3b/884/613/" class="linkedin" target="_blank"></a>
 		<a href="https://coderbits.com/NightHawk" class="coderbits" target="_blank"></a>
-		<a href="assets/pdf/cv-antoine_savignac.pdf" class="cv" target="_blank"></a>
+		<a href="dist/pdf/cv-antoine_savignac.pdf" class="cv" target="_blank"></a>
 	</div>
 	<div class="scroll cursor"></div>
 	<div id="projects">
 		<div class="wrapper">
-			<div id="EachProject" ng-repeat='project in projects'>
+			<div class="project" ng-repeat='project in projects'>
 				<div class="Title">{{project.title}}</div>
 				<div class="linkProject cursor" ng-show='{{project.event.active}}' ng-click='events("{{project.event.value}}")'>
 					<div class="desc">
 						{{project.description}}
-						<div class="imgProject" ng-style="project.background"></div>
+						<div class="imgProject" style="background: url('dist/img/mobile/{{project.background}}')"></div>
 					</div>
 				</div>
 				<a class="linkProject cursor" target="_blank" ng-href='{{project.link}}' ng-hide='{{project.event.active}}'>
 					<div class="desc">
 						{{project.description}}
-						<div class="imgProject" ng-style="project.background"></div>
+						<div class="imgProject" style="background: url('dist/img/mobile/{{project.background}}')"></div>
 					</div>
 				</a>
 			</div>
@@ -51,9 +53,9 @@
 			<p>J'ai réalisé ce projet dans le cadre de mon <b class="orange">Master 1 à l'ESTEI</b>.</p>
 			<p>Kariboo vous permet entre autre de <b class="orange">lire les musiques / videos de votre téléphone portable sur votre ordinateur</b>, de gérer vos contacts ou encore de faire de simple échanges de fichier.</p>
 			<p>Ce projet est en cours de réalisation.</p><br />
-			<img src="assets/img/Kariboo-main.png" alt="">
-			<img src="assets/img/Kariboo-contact.png" alt="">
-			<img src="assets/img/Kariboo-music.png" alt="">
+			<img src="dist/img/Kariboo-main.png" alt="">
+			<img src="dist/img/Kariboo-contact.png" alt="">
+			<img src="dist/img/Kariboo-music.png" alt="">
 	  	</div>
 	</div>
 	<div id="feux-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
