--- a/mobile.html
+++ b/mobile.html
@@ -7,9 +7,8 @@
 	<meta name="description" content="Antoine Savignac Portfolio" />
 	<meta name="keywords" content="antoine, savignac, antoine savignac, portfolio, web, chef de projet, junior" />
 	<link rel="icon" type="image/png" href="dist/img/favicon.png" />
-	<link rel="stylesheet" href="app/css/reset.css">
-	<link rel="stylesheet" href="app/css/bootstrap.min.css">
-	<link rel="stylesheet" href="app/css/mobile.css">
+	<link rel="stylesheet" href="dist/css/vendor.css">
+	<link rel="stylesheet" href="dist/css/mobile.css">
 </head>
 <body ng-controller="Main">
 	<div id="logo">
@@ -77,8 +76,8 @@
 	  		<a href="http://m.yummypets.com/classified/#/" target="_blank" class="cursor submit">Petites annonces</a>
 	  	</div>
 	</div>
-	<script type="text/javascript" src="dist/js/vendor-1.0.0.js"></script>
-	<script type="text/javascript" src="dist/js/app-1.0.0.js"></script>
+	<script type="text/javascript" src="dist/js/vendor.js"></script>
+	<script type="text/javascript" src="dist/js/app.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
