--- a/app/mobile.html
+++ b/app/mobile.html
@@ -1,18 +1,29 @@
 <!doctype html>
-<html lang="fr" ng-app="Portfolio">
+<html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
   <title>Antoine Savignac</title>
   <meta name="description" content="Antoine Savignac Portfolio" />
   <meta name="keywords" content="antoine, savignac, antoine savignac, portfolio, web, chef de projet, junior" />
-  <link rel="icon" type="image/png" href="dist/img/favicon.png" />
-  <link rel="stylesheet" href="dist/css/vendor.css">
-  <link rel="stylesheet" href="dist/css/mobile.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <!-- build:css(.) styles/vendor.css -->
+  <link rel="stylesheet" href="styles/reset.css">
+  <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css" />
+  <!-- endbower -->
+  
+  <!-- endbuild -->
+
+  <!-- build:css(.tmp) styles/mobile.css -->
+    <link rel="stylesheet" href="styles/common.css">
+    <link rel="stylesheet" href="styles/mobile.css">
+  <!-- endbuild -->
 </head>
-<body ng-controller="Main">
+<body ng-app="antoinesavignacfrApp" ng-controller="MainCtrl">
   <div id="logo">
-    <object data="dist/svg/logo-mobile.svg" type="image/svg+xml"></object>
+    <object data="images/logo-mobile.svg" type="image/svg+xml"></object>
   </div>
   <div class="socials">
     <a href="https://www.facebook.com/asavignac1" class="facebook" target="_blank"></a>
@@ -20,72 +31,50 @@
     <a href="https://github.com/Nighthawk14" class="github" target="_blank"></a>
     <a href="http://fr.linkedin.com/pub/antoine-savignac/3b/884/613/" class="linkedin" target="_blank"></a>
     <a href="https://coderbits.com/NightHawk" class="coderbits" target="_blank"></a>
-    <a href="dist/pdf/cv-antoine_savignac.pdf" class="cv" target="_blank"></a>
+    <a href="/cv-antoine_savignac.pdf" class="cv" target="_blank"></a>
   </div>
   <div class="scroll cursor"></div>
   <div id="projects">
     <div class="wrapper">
-      <div class="project" ng-repeat='project in projects'>
-        <div class="Title">{{project.title}}</div>
-        <div class="linkProject cursor" ng-show='{{project.event.active}}' ng-click='events("{{project.event.value}}")'>
-          <div class="desc">
-            {{project.description}}
-            <div class="imgProject" style="background: url('dist/img/mobile/{{project.background}}')"></div>
-          </div>
-        </div>
-        <a class="linkProject cursor" target="_blank" ng-href='{{project.link}}' ng-hide='{{project.event.active}}'>
-          <div class="desc">
-            {{project.description}}
-            <div class="imgProject" style="background: url('dist/img/mobile/{{project.background}}')"></div>
-          </div>
-        </a>
-      </div>
-      <div class="clear"></div>
+      <div id="project-{{$index}}" project-mobile class="project" ng-repeat="project in projects"></div>
     </div>
   </div>
-  <div id="kariboo-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-header">
-        <h1>Kariboo</h1>
-      </div>
-      <div class="modal-body">
-        <p><b class="orange">Kariboo</b> est une application mobile IOS développée en Objective-C. Elle permet d'éffectuer des échanges de données entre son mobile et son ordinateur grâce à un réseau wifi.</p>
-      <p>J'ai réalisé ce projet dans le cadre de mon <b class="orange">Master 1 à l'ESTEI</b>.</p>
-      <p>Kariboo vous permet entre autre de <b class="orange">lire les musiques / videos de votre téléphone portable sur votre ordinateur</b>, de gérer vos contacts ou encore de faire de simple échanges de fichier.</p>
-      <p>Ce projet est en cours de réalisation.</p><br />
-      <img src="dist/img/Kariboo-main.png" alt="">
-      <img src="dist/img/Kariboo-contact.png" alt="">
-      <img src="dist/img/Kariboo-music.png" alt="">
-      </div>
-  </div>
-  <div id="feux-modal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-header">
-        <h1>Les feux verts</h1>
-      </div>
-      <div class="modal-body">
-        <a href="http://www.lesfeuxverts.com" target="_blank" class="cursor submit">Les feux verts</a>
-        <a href="http://www.ironweb.org" target="_blank" class="cursor submit">Iron Web</a>
-      </div>
-  </div>
-  <div id="mobiles-yummy-modal" class="modal fade" role="dialog" aria-hidden="true">
-    <div class="modal-header">
-        <h1>Sites web mobiles / Yummypets</h1>
-      </div>
-      <div class="modal-body">
-        <a href="http://m.yummypets.com/articles/dist/#/list/" target="_blank" class="cursor submit">Blog mobile</a>
-        <a href="http://m.yummypets.com/missing/#/" target="_blank" class="cursor submit">Perdu / trouvés</a>
-        <a href="http://m.yummypets.com/classified/#/" target="_blank" class="cursor submit">Petites annonces</a>
-      </div>
-  </div>
-  <script type="text/javascript" src="dist/js/vendor.js"></script>
-  <script type="text/javascript" src="dist/js/app.js"></script>
+  <div ng-include="'partials/modals.html'"></div>
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-42237776-1', 'antoinesavignac.fr');
-    ga('send', 'pageview');
+     ga('create', 'UA-42237776-1', 'antoinesavignac.fr');
+     ga('send', 'pageview');
   </script>
+
+  <!--[if lt IE 9]>
+  <script src="bower_components/es5-shim/es5-shim.js"></script>
+  <script src="bower_components/json3/lib/json3.min.js"></script>
+  <![endif]-->
+
+  <!-- build:js(.) scripts/vendor.js -->
+  
+  <!-- bower:js -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
+  <!-- endbower -->
+  <script type="text/javascript" src="bower_components/jquery.ui/ui/core.js"></script>
+  <script type="text/javascript" src="bower_components/jquery.ui/ui/effect.js"></script>
+  <!-- endbuild -->
+
+  <!-- build:js({.tmp,app}) scripts/main.js -->
+  <script src="scripts/app.js"></script>
+  <script src="scripts/controllers/main.js"></script>
+  <script src="scripts/controllers/project.js"></script>
+  <script src="scripts/directives/project.js"></script>
+  <script src="scripts/directives/line.js"></script>
+  <script src="scripts/directives/nav.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
