Add projects datas + style + finitions

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -31,7 +31,7 @@
     <a href="https://github.com/Nighthawk14" class="github" target="_blank"></a>
     <a href="http://fr.linkedin.com/pub/antoine-savignac/3b/884/613/" class="linkedin" target="_blank"></a>
     <a href="https://coderbits.com/NightHawk" class="coderbits" target="_blank"></a>
-    <a href="/cv-antoine_savignac.pdf" class="cv" target="_blank"></a>
+    <a href="/cv-antoine-savignac.pdf" class="cv" target="_blank"></a>
   </div>
   <div class="scroll cursor"></div>
   <div id="technos" ng-controller="TechCtrl">
@@ -56,25 +56,28 @@
   <script src="bower_components/json3/lib/json3.min.js"></script>
   <![endif]-->
 
-  <!-- build:js(.) scripts/vendor.js -->
-  
-  <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
-  <!-- endbower -->
-  <script type="text/javascript" src="bower_components/jquery.ui/ui/core.js"></script>
-  <script type="text/javascript" src="bower_components/jquery.ui/ui/effect.js"></script>
-  <!-- endbuild -->
+  <<!-- build:js(.) scripts/vendor.js -->
+    
+    <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
+    <script src="bower_components/multiline/browser.js"></script>
+    <!-- endbower -->
+    <script type="text/javascript" src="bower_components/jquery.ui/ui/core.js"></script>
+    <script type="text/javascript" src="bower_components/jquery.ui/ui/effect.js"></script>
+    <!-- endbuild -->
 
-  <!-- build:js({.tmp,app}) scripts/main.js -->
-  <script src="scripts/app.js"></script>
-  <script src="scripts/controllers/main.js"></script>
-  <script src="scripts/controllers/tech.js"></script>
-  <script src="scripts/directives/tech.js"></script>
-  <script src="scripts/directives/line.js"></script>
-  <script src="scripts/directives/nav.js"></script>
-  <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/main.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/tech.js"></script>
+    <script src="scripts/controllers/project.js"></script>
+    <script src="scripts/directives/tech.js"></script>
+    <script src="scripts/directives/line.js"></script>
+    <script src="scripts/directives/nav.js"></script>
+    <script src="scripts/directives/timeline.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
