--- a/app/mobile.html
+++ b/app/mobile.html
@@ -34,12 +34,14 @@
     <a href="/cv-antoine-savignac.pdf" class="cv" target="_blank"></a>
   </div>
   <div class="scroll cursor"></div>
-  <div id="technos" ng-controller="TechCtrl">
+  <div ng-include="'views/timeline.html'"></div>
+  <!-- <div id="technos" ng-controller="TechCtrl">
     <div class="wrapper">
-      <div id="tech-{{$index}}" tech-mobile class="tech" ng-repeat="tech in technos"></div>
+      <div class="techs">
+        <div id="tech-{{$index}}" tech class="tech" ng-class="(tech.disabled) ? 'disabled' : ''" ng-repeat="tech in technos"></div>
+      </div>
     </div>
-  </div>
-  <div ng-include="'partials/modals.html'"></div>
+  </div> -->
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
   <script>
      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -56,7 +58,7 @@
   <script src="bower_components/json3/lib/json3.min.js"></script>
   <![endif]-->
 
-  <<!-- build:js(.) scripts/vendor.js -->
+  <!-- build:js(.) scripts/vendor.js -->
     
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
