--- a/app/mobile.html
+++ b/app/mobile.html
@@ -66,6 +66,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
     <script src="bower_components/multiline/browser.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <!-- endbower -->
     <script type="text/javascript" src="bower_components/jquery.ui/ui/core.js"></script>
     <script type="text/javascript" src="bower_components/jquery.ui/ui/effect.js"></script>
