--- a/app/mobile.html
+++ b/app/mobile.html
@@ -32,6 +32,8 @@
     <a href="http://fr.linkedin.com/pub/antoine-savignac/3b/884/613/" class="linkedin" target="_blank"></a>
     <a href="https://coderbits.com/NightHawk" class="coderbits" target="_blank"></a>
     <a href="/cv-antoine-savignac.pdf" class="cv" target="_blank"></a>
+    <div class="nav-link fr" ng-show="lang=='en'" ng-click="changeLanguage('fr')"></div>
+    <div class="nav-link en" ng-show="lang=='fr'" ng-click="changeLanguage('en')"></div>
   </div>
   <div class="scroll cursor"></div>
   <div ng-include="'views/timeline.html'"></div>
