--- a/app/mobile.html
+++ b/app/mobile.html
@@ -66,7 +66,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular-scroll/angular-scroll.min.js"></script>
+    <script src="bower_components/angular-scroll/angular-scroll.js"></script>
     <script src="bower_components/multiline/browser.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
     <!-- endbower -->
