--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- use http://www.favicon-generator.org/ to replace files in public/icon-->
-  <link rel="apple-touch-icon" sizes="57x57" href="/icon/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/icon/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/icon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/icon/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/icon/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/icon/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/icon/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/icon/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/icon/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/icon/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/icon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/icon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/icon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.png">
   <link rel="manifest" href="/manifest.json">
-  <meta name="msapplication-TileColor" content="#00bcd4">
-  <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
-  <meta name="theme-color" content="#00bcd4">
+  <meta name="theme-color" content="#E95A2D">
   <!-- end favicon -->
 
   <!-- base url -->
@@ -39,12 +24,12 @@
 </head>
 <body>
 
-  <!--[if lte IE 8]>
+  <!--[if lte IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
   <app>
-    Loading...
+    <!-- <img src="/assets/images/loader.gif" alt="" /> -->
   </app>
 
   <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
