--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Portfolio2</title>
+  <title>Antoine Savignac</title>
   <base href="/">
-
+  <meta name="description" content="Antoine Savignac Portfolio" />
+  <meta name="keywords" content="antoine, savignac, antoine savignac, portfolio, web, software engineer, javascript" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#E95A2D">
 </head>
 <body>
+  <!--[if lte IE 10]>
+  <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
   <app-root></app-root>
+  <!-- Google Analytics: change UA-71073175-1 to be your site's ID -->
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42237776-1', 'antoinesavignac.fr');
+      ga('send', 'pageview');
+  </script>
 </body>
 </html>
