--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png">
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#E95A2D">
 </head>
